# paradigm

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  README.md  pdm_config.h.in  realloc.sh
Cython/: CMakeLists.txt  Pypdm.pyx.in  pdm_block_to_block.pxi  pdm_block_to_part.pxi  pdm_cell_to_node.pxi  pdm_cellface_orient.pxi  pdm_closest_points.pxi  pdm_connectivities.pxi  pdm_dconnectivity_transform.pxi  pdm_dcube_gen.pxi  pdm_dcube_nodal_gen.pxi  pdm_dist_cloud_surf.pxi  pdm_distant_neighbor.pxi  pdm_dmesh.pxi  pdm_dmesh_nodal.pxi  pdm_dmesh_nodal_to_dmesh.pxi  pdm_domain_interface.pxi  pdm_domain_merge.pxi  pdm_extract_part.pxi  pdm_field_cell_to_vtx.pxi  pdm_gnum.pxi  pdm_gnum_location.pxi  pdm_inria_mesh_fmt.pxi  pdm_interpolate_from_mesh_location.pxi  pdm_mesh_intersection.pxi  pdm_mesh_location.pxi  pdm_multi_part.pxi  pdm_overlay.pxi  pdm_part.pxi  pdm_part_coarse.pxi  pdm_part_coarse.pxi.in  pdm_part_domain_interface.pxi  pdm_part_extension.pxi  pdm_part_mesh_nodal.pxi  pdm_part_to_block.pxi  pdm_part_to_part.pxi  pdm_partitioning_algorithm.pxi  pdm_points_merge.pxi  pdm_poly_mesh_surf.pxi  pdm_sphere_surf_gen.pxi  (+2 more)
Cython/Pypdm/: CMakeLists.txt  Pypdm.pyx.in  __init__.py  pdm_block_to_part.pxi  pdm_closest_points.pxi  pdm_connectivities.pxi  pdm_dconnectivity_transform.pxi  pdm_dcube_gen.pxi  pdm_dcube_nodal_gen.pxi  pdm_distant_neighbor.pxi  pdm_dmesh.pxi  pdm_dmesh_extract.pxi  pdm_dmesh_nodal.pxi  pdm_dmesh_nodal_to_dmesh.pxi  pdm_domain_interface.pxi  pdm_domain_merge.pxi  pdm_extract_part.pxi  pdm_field_cell_to_vtx.pxi  pdm_generate_mesh.pxi  pdm_gnum.pxi  pdm_gnum_location.pxi  pdm_inria_mesh_fmt.pxi  pdm_interpolate_from_mesh_location.pxi  pdm_isosurface.pxi  pdm_mesh_intersection.pxi  pdm_mesh_location.pxi  pdm_multi_part.pxi  pdm_overlay.pxi  pdm_part.pxi  pdm_part_coarse.pxi.in  pdm_part_domain_interface.pxi  pdm_part_extension.pxi  pdm_part_mesh_nodal.pxi  pdm_part_mesh_reorient_geom.pxi  pdm_part_to_block.pxi  pdm_part_to_part.pxi  pdm_partitioning_algorithm.pxi  pdm_point_cloud_gen.pxi  pdm_points_merge.pxi  pdm_poly_mesh_surf.pxi  (+4 more)
extensions/: CMakeLists.txt
script/: CMakeLists.txt  pdm_launch.in  pdm_launch_python.in  pdm_run.in
script/asan/: asan.supp
script/prepare_ci/: parse_test_file_and_generate_base_test.py  run_tests_pdm_t_closest_points.sh  run_tests_pdm_t_dcube_nodal_gen.sh  run_tests_pdm_t_dist.sh  run_tests_pdm_t_dist_strip.sh  run_tests_pdm_t_part_to_block_geom.sh  run_top_test_base.sh
src/: CMakeLists.txt  mod_pdm.F90  pdm.F90  pdm.c  pdm.h  pdm_doctest.h  pdm_priv.h  pdmf.h
src/adapt/: pdm_mesh_adapt.h
src/ext_wrapper/: pdm_ext_wrapper.c  pdm_ext_wrapper.h
src/gpu/: pdm_closest_points.cu  pdm_closest_points.cuh  pdm_cuda.cu  pdm_cuda.cuh  pdm_cuda_error.cu  pdm_cuda_error.cuh  pdm_handles.cu  pdm_handles.cuh  pdm_morton.cu  pdm_morton.cuh  pdm_mpi.cu  pdm_mpi.cuh  pdm_para_octree.cu  pdm_para_octree.cuh  pdm_timer.cu  pdm_timer.cuh
src/io/: CMakeLists.txt  pdm_cuda_error.cu  pdm_cuda_error.h  pdm_error.c  pdm_logging.c  pdm_logging.h  pdm_vtk.c  pdm_vtk.h
src/mesh/: fvmc_defs.c  fvmc_defs.h  fvmc_ho_basis.c  fvmc_ho_basis.h  fvmc_nodal.c  fvmc_nodal.h  fvmc_point_location.c  fvmc_point_location.h  fvmc_triangulate.c  fvmc_triangulate.h  mod_overlay.F90  pdm_cellface_orient.c  pdm_cellface_orient.h  pdm_closest_points.F90  pdm_closest_points.c  pdm_closest_points.cu  pdm_closest_points.h  pdm_closest_points_priv.h  pdm_dconnectivity_transform.c  pdm_dconnectivity_transform.h  pdm_dgeom_elem.c  pdm_dgeom_elem.h  pdm_disosurface.c  pdm_dist_cellcenter_surf.F90  pdm_dist_cellcenter_surf.c  pdm_dist_cloud_surf.F90  pdm_dist_cloud_surf.c  pdm_dist_cloud_surf.h  pdm_dist_cloud_surf_priv.h  pdm_dmesh_nodal.F90  pdm_dmesh_nodal.c  pdm_dmesh_nodal.h  pdm_dmesh_nodal_elements_utils.c  pdm_dmesh_nodal_elements_utils.h  pdm_dmesh_nodal_elmts.c  pdm_dmesh_nodal_elmts.h  pdm_dmesh_nodal_elmts_priv.h  pdm_dmesh_nodal_priv.h  pdm_dmesh_nodal_to_dmesh.c  pdm_dmesh_nodal_to_dmesh.h  (+123 more)
src/meshgen/: creeMaillagePolygone2D.c  creeMaillagePolygone2D.h  pdm_box_gen.c  pdm_box_gen.h  pdm_dcube_gen.F90  pdm_dcube_gen.c  pdm_dcube_gen.h  pdm_dcube_gen_priv.h  pdm_dcube_nodal_gen.F90  pdm_dcube_nodal_gen.c  pdm_dcube_nodal_gen.h  pdm_dcube_nodal_gen2.c  pdm_dcube_nodal_gen2.h  pdm_dcube_nodal_gen2_priv.h  pdm_dcube_nodal_gen_priv.h  pdm_generate_mesh.F90  pdm_generate_mesh.c  pdm_generate_mesh.h  pdm_point_cloud_gen.c  pdm_point_cloud_gen.h  pdm_poly_surf_gen.c  pdm_poly_surf_gen.h  pdm_poly_vol_gen.c  pdm_poly_vol_gen.h  pdm_sphere_surf_gen.F90  pdm_sphere_surf_gen.c  pdm_sphere_surf_gen.h  pdm_sphere_vol_gen.c  pdm_sphere_vol_gen.h
src/mpi_wrapper/: pdm_mpi.c  pdm_mpi.h  pdm_mpi_ext_dependencies.c  pdm_mpi_ext_dependencies.h  pdm_mpi_node_first_rank.c  pdm_mpi_priv.h  pdm_no_mpi.c
src/pario/: mod_pdm_io.F90  mod_pdm_mesh_nodal.F90  mod_pdm_writer.F90  pdm_file_par.c  pdm_file_seq.c  pdm_file_seq.h  pdm_io.F90  pdm_io.c  pdm_io.h  pdm_io_tab.c  (+16 more)
test/: CMakeLists.txt  compare_dist_rocket.c  compare_single_closest_point.c  compare_single_closest_point_rocket.c  cs_test_3d.c  debug_cas_bruno2.c  illustration_mesh_location.c  part_cube.c  pdm_t_GPU_HelloWorld.c  pdm_t_bezier_triangle_location.c  pdm_t_block_to_part.F90  pdm_t_block_to_part_f.F90  pdm_t_block_to_part_p.py  pdm_t_box_tree.c  pdm_t_box_tree_intersect_volume_box.c  pdm_t_cell_center_dist.c  pdm_t_cellface_orient.c  pdm_t_cellface_orient_agglo.c  pdm_t_cellface_orient_poly.c  pdm_t_cellface_orient_poly2.c  pdm_t_cellvtx_f.F90  pdm_t_closest_points.c  pdm_t_closest_points_1_point.c  pdm_t_closest_points_f.F90  pdm_t_closest_points_small.c  pdm_t_closest_points_small2.c  pdm_t_closest_points_small2p.c  pdm_t_clustering.c  pdm_t_compute_part_edges.c  pdm_t_connect_domain.c  pdm_t_connect_zone.c  pdm_t_create_edge_gnum.c  pdm_t_dbbtree.c  pdm_t_dbbtree_intersect_volume_box.c  pdm_t_dcube_gen_f.F90  pdm_t_dcube_nodal_gen.c  pdm_t_dcube_nodal_gen_f.F90  pdm_t_dface_vtx_from_dface_edge.c  pdm_t_dist.c  pdm_t_dist_axitransbump.c  (+210 more)
training/: CMakeLists.txt
(+376 files in other folders)
